--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.xavier</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -34,6 +34,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
+                    <checkModificationExcludes>
+                        <checkModificationExclude>pom.xml</checkModificationExclude>
+                        <checkModificationExclude>**</checkModificationExclude>
+                    </checkModificationExcludes>
                     <goals>install</goals>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
@@ -42,7 +46,7 @@
     </build>
     <scm>
         <developerConnection>scm:git:git@github.com:captainxavier/pet-clinic-spring.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>pet-clinic-1.0.2</tag>
     </scm>
 
 </project>
