--- a/release.properties
+++ b/release.properties
@@ -1,22 +1,30 @@
 #release configuration
-#Thu Sep 24 01:41:43 EAT 2020
+#Thu Sep 24 09:38:52 EAT 2020
 projectVersionPolicyId=default
-project.rel.com.xavier\:pet-clinic-data=0.0.1
+scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
+project.scm.com.xavier\:pet-clinic-data.tag=pet-clinic-1.0.2
+project.dev.com.xavier\:pet-clinic-web=1.0.2-SNAPSHOT
+project.scm.com.xavier\:pet-clinic.tag=pet-clinic-1.0.2
+project.scm.com.xavier\:pet-clinic-web.tag=pet-clinic-1.0.2
+pushChanges=true
+project.rel.com.xavier\:pet-clinic-web=1.0.1
+project.scm.com.xavier\:pet-clinic.developerConnection=scm\:git\:git@github.com\:captainxavier/pet-clinic-spring.git
+project.rel.com.xavier\:pet-clinic-data=1.0.1
+scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-project.scm.com.xavier\:pet-clinic-data.empty=true
-project.dev.com.xavier\:pet-clinic-web=0.0.2-SNAPSHOT
-project.dev.com.xavier\:pet-clinic-data=0.0.2-SNAPSHOT
+releaseStrategyId=default
+project.scm.com.xavier\:pet-clinic-web.developerConnection=scm\:git\:git@github.com\:captainxavier/pet-clinic-spring.git
+project.dev.com.xavier\:pet-clinic-data=1.0.2-SNAPSHOT
 completedPhase=run-preparation-goals
 scm.url=scm\:git\:git@github.com\:captainxavier/pet-clinic-spring.git
-project.scm.com.xavier\:pet-clinic.tag=HEAD
+project.scm.com.xavier\:pet-clinic-data.developerConnection=scm\:git\:git@github.com\:captainxavier/pet-clinic-spring.git
+scm.developmentCommitComment=@{prefix} prepare for next development iteration
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-project.scm.com.xavier\:pet-clinic-web.empty=true
-scm.tag=pet-clinic-0.0.1
-project.rel.com.xavier\:pet-clinic-web=0.0.1
-project.rel.com.xavier\:pet-clinic=0.0.1
-project.dev.com.xavier\:pet-clinic=0.0.2-SNAPSHOT
-project.scm.com.xavier\:pet-clinic.developerConnection=scm\:git\:git@github.com\:captainxavier/pet-clinic-spring.git
+scm.tag=pet-clinic-1.0.1
+project.rel.com.xavier\:pet-clinic=1.0.1
+project.dev.com.xavier\:pet-clinic=1.0.2-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
+exec.pomFileName=pom.xml
